# solace-rs

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yaml
.github/workflows/: ci.yaml
examples/: builder_publisher.rs  builder_subscriber.rs  endpoint_provision.rs  flow_subscriber.rs  request_reply.rs  session_builder_subscriber.rs  topic_publisher.rs  topic_subscriber.rs
solace-rs-sys/: Cargo.toml  README.md  build.rs
solace-rs-sys/scripts/: create-binding.sh
solace-sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
solace-sys/src/: lib.rs  solace_binding.rs
src/: cache_session.rs  context.rs  endpoint_props.rs  event.rs  flow.rs  lib.rs  message.rs  session.rs  solace.rs  util.rs
src/flow/: builder.rs  callback.rs  event.rs
src/message/: destination.rs  inbound.rs  outbound.rs
src/session/: builder.rs  error.rs  event.rs  util.rs
tests/: integration_test.rs
