[package]
name = "solace-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["solace", "messaging"]
readme = "README.md"
authors = ["Ashim Sedhain <asimsedhain33@gmail.com>"]

repository = "https://github.com/asimsedhain/solace-rs"
homepage = "https://github.com/asimsedhain/solace-rs"
documentation = "https://github.com/asimsedhain/solace-rs"

description = """
The Unofficial Solace PubSub+ Rust Client Library.
It can be used to access the services of a Solace PubSub+ Event Broker.
This is a wrapper around the Solace C library. Use under your own risk!
The C library is not included.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_primitive = "0.1.1"
num-traits = "0.2.15"
thiserror = "1.0.40"
solace-sys = { version="0.1.0", path = "./solace-sys" }

