[package]
name = "solace-rs"
version = "0.3.5"
edition = "2021"
license = "MIT"
rust-version = "1.70.0"
keywords = ["solace", "messaging"]
readme = "README.md"
authors = ["Ashim Sedhain <asimsedhain33@gmail.com>"]

repository = "https://github.com/asimsedhain/solace-rs"
homepage = "https://github.com/asimsedhain/solace-rs"
documentation = "https://docs.rs/solace-rs"

description = """
The Unofficial Solace PubSub+ Rust Client Library.
It can be used to access the services of a Solace PubSub+ Event Broker.
This is a wrapper around the Solace C library. Use under your own risk!
The C library is not included.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_primitive = "0.1.1"
num-traits = "0.2.15"
thiserror = "1.0.40"
solace-rs-sys = { version="1.0.0", path = "./solace-rs-sys" }
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.17"

